# Scarlet-Game-Engine

./: .gitignore  CMakeLists.txt
Engine/: CMakeLists.txt
Engine/include/: matrix.h  renderer.h  shader.h  transform.h  vector.h  window.h
Engine/include/input/: gamepad.h  input.h  input_manager.h  input_mapping.h  keyboard.h  keycode.h  mouse.h
Engine/src/: matrix.cpp  renderer.cpp  shader.cpp  transform.cpp  vector.cpp  window.cpp
Engine/src/input/: gamepad.cpp  input.cpp  input_manager.cpp  input_mappings.cpp  keyboard.cpp  mouse.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: application.cpp
